--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.jobengine = debug
+log4j.logger.jobengine.app = debug
 log4j.logger.jobengine.app.RestHeaderInterceptor = info
 log4j.logger.org.jboss.resteasy.plugins.server = debug
 log4j.logger.org.jboss.resteasy.core = debug
