--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,12 @@ dependencies {
             'org.jboss.resteasy:resteasy-jackson2-provider:3.0.2.Final',
             'org.jboss.resteasy:resteasy-cache-core:3.0.2.Final',
             'junit:junit:4.11',
-            'org.springframework:spring-test:3.2.3.RELEASE'
+            'org.springframework:spring-test:3.2.3.RELEASE',
+            'org.jmock:jmock-legacy:2.6.0'
 
     testCompile  'com.restfuse:com.eclipsesource.restfuse:1.2.0',
             'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
+
 }
 
 buildscript {
