--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,17 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
+    <!--  security measure to combat XXE attacks - see http://docs.jboss.org/resteasy/docs/2.3.6.Final/userguide/html/Content_Marshalling_Providers.html -->
+    <context-param>
+        <param-name>resteasy.document.expand.entity.references</param-name>
+        <param-value>false</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>resteasy.providers</param-name>
+        <param-value>jobengine.app.request.HeaderRequestFilter,jobengine.app.request.HeaderResponseFilter</param-value>
+    </context-param>
+
     <filter>
         <filter-name>etagFilter</filter-name>
         <filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
@@ -20,17 +31,6 @@
         <url-pattern>/api/*</url-pattern>
     </filter-mapping>
 
-
-    <!--<context-param>-->
-        <!--<param-name>resteasy.media.type.param.mapping</param-name>-->
-        <!--<param-value>contentType</param-value>-->
-    <!--</context-param>-->
-
-    <!--  security measure to combat XXE attacks - see http://docs.jboss.org/resteasy/docs/2.3.6.Final/userguide/html/Content_Marshalling_Providers.html -->
-    <context-param>
-        <param-name>resteasy.document.expand.entity.references</param-name>
-        <param-value>false</param-value>
-    </context-param>
 
     <!-- <context-param> <param-name>resteasy.scan</param-name> <param-value>true</param-value>
      </context-param> -->
