--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,13 @@
 
     <context-param>
         <param-name>resteasy.providers</param-name>
-        <param-value>jobengine.app.request.HeaderRequestFilter,jobengine.app.request.HeaderResponseFilter</param-value>
+        <param-value>
+            jobengine.app.request.HeaderRequestFilter,
+            jobengine.app.response.HeaderResponseFilter,
+            jobengine.app.response.ObjectNotFoundExceptionHandler,
+            jobengine.app.response.RestExceptionHandler,
+            jobengine.app.response.GenericExceptionHandler
+        </param-value>
     </context-param>
 
     <context-param>
@@ -47,10 +53,6 @@
     <servlet>
         <servlet-name>api</servlet-name>
         <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
-        <init-param>
-            <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-            <param-value>jobengine.app.request.HeaderRequestFilter</param-value>
-        </init-param>
     </servlet>
 
     <servlet-mapping>
