--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
             'org.jboss.resteasy:resteasy-cache-core:3.0.2.Final',
             'junit:junit:4.11',
             'org.springframework:spring-test:3.2.3.RELEASE',
-            'org.jmock:jmock-legacy:2.6.0'
+            'org.jmock:jmock-legacy:2.6.0',
+            'com.wordnik:swagger-jaxrs_2.10:1.3.0-RC3'
 
     testCompile  'com.restfuse:com.eclipsesource.restfuse:1.2.0',
             'org.eclipse.jetty:jetty-webapp:8.1.3.v20120416'
