--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,18 @@
     <servlet>
         <servlet-name>api</servlet-name>
         <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+        <init-param>
+            <param-name>api.version</param-name>
+            <param-value>0.1</param-value>
+        </init-param>
+        <init-param>
+            <param-name>swagger.version</param-name>
+            <param-value>2.10</param-value>
+        </init-param>
+        <init-param>
+            <param-name>swagger.api.basepath</param-name>
+            <param-value>http://localhost:8080/api-spike/doc</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
